Fix the horizontal alignment of the thread-view overflow menu item icons

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -691,6 +691,10 @@ body:not(.inboxsdk__gmailv1css) table + .inboxsdk__compose_statusbar {
   margin-top: -1px;
 }
 
+body.inboxsdk__gmailv1css .inboxsdk__menuItem.J-N .J-N-JX {
+  margin-left: 3px;
+}
+
 body.inboxsdk__gmailv1css .inboxsdk__menuItem.J-N:not(.J-N-JT) .J-N-JX {
   margin-top: 0;
 }
